data/derived/comb/progs/unify/prog6182.ml.out
Characters 166-192:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'c * 'd
